# jcx_loonie_scoring

./: README.md  pyproject.toml  requirements.txt  unpack_files.ipynb
src/: app.py  app_utils.py  config.py
src/IsGood_Model/: IsGood_SCALER_V1.pkl  input.json  output.json
src/ND_Model/: NegativeDB_model_V3_Testbed.pkl  README_NDModel_Execution_Approach.txt  input for NegativeDBModelLP_v1.json  model.py  output.json
src/Plaid_Model/: README_PlaidModel_Execution_Approach.txt  inputJSON for PlaidUDW_v1.json  model.py  output.json  standardscaler_V3.pkl
src/api_types/: errors.py  health.py  nd.py  plaid.py
