# 3.11
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.poetry]
name = "loonie-scoringv16"
version = "0.1.0"
description = ""
authors = ["Dean Patel <dean@dmaassociatescorp.com>"]
readme = "README.md"
package-mode = false

[tool.ruff]
line-length = 120

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.poetry.dependencies]
python = "^3.11.6"
joblib = "1.3.2"
numpy = "1.26.2"
pandas = "2.1.4"
scikit_learn = "1.3.2"
scikit_optimize = "0.9.0"
xgboost = "2.0.3"
Flask = "3.0.3"
Flask-Cors = "4.0.1"
waitress = "3.0.0"
python-dotenv = "1.0.1"
marshmallow = "3.23.0"
apispec = "6.7.0"
flask-apispec = "0.11.4"
gunicorn = "23.0.0"
statsmodels = "0.14.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
mypy = "^1.0.0"
ruff = "^0.0.291"
pytest-cov = "^4.0"
pytest-azurepipelines = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
